--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting XYZ
+        # Disabling shallow clone is recommended for improving relevancy of reporting XYZ Now
         fetch-depth: 0
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
